# fastapi-prc

./: .gitignore  Dockerfile  package.json  pyproject.toml
.github/workflow/: ci.yml  deploy-prod.yml
fastapi_prc/app/: config.py  crud.py  main.py  security.py  utils.py
fastapi_prc/app/api/: api.py  deps.py
fastapi_prc/app/api/db/: init_db.py  tables.py
fastapi_prc/app/api/endpoints/: items.py  login.py  users.py
fastapi_prc/app/api/models/: users.py
fastapi_prc/app/api/schemas/: __init__.py  items.py  tokens.py  users.py
tests/: test_fastapi_prc.py
