[tool.poetry]
name = "fastapi-prc"
version = "0.1.0"
description = ""
authors = ["sejin-P <chunpark37@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.59.0"
typing = "^3.7.4"
sqlalchemy = "^1.3.18"
passlib = "^1.7.2"
databases = "^0.3.2"
aiosqlite = "^0.15.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
