[tool.poetry]
name = "fastapi-prc"
version = "0.1.0"
description = ""
authors = ["sejin-P <chunpark37@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8.1"
sqlalchemy = "^1.3.18"
fastapi = "^0.59.0"
python-jose = "^3.1.0"
mysqlclient = "^2.0.1"
aiomysql = "^0.0.20"
databases = "^0.3.2"
bcrypt = "^3.1.7"
fastapi_sqlalchemy = "^0.1.4"
email-validator = "^1.1.1"
passlib = "^1.7.2"
uvicorn = "^0.11.6"
aiosqlite = "^0.15.0"
python-multipart = "^0.0.5"
emails = "^0.6"
jinja2 = "^2.11.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
